# causal-audit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
causal_audit/: __init__.py  a_auditor.py  b_quantifier.py  c_recommender.py  gatekeeper.py
causal_audit/config/: calib_v1.yaml  calib_v2.json  calib_v2.yaml  method_catalog.yaml  priors_v1.yaml
causal_audit/plotting/: __init__.py  core_plots_v01.py  dataset_dashboards.py  dataset_dashboards_all_enhanced.py  dataset_dashboards_enhanced.py  dgp_atlas_detailed.py  diagnostic_dashboard.py  figures.py  real_world_walkthroughs.py  scientific_plots.py
causal_audit/utils/: __init__.py  io.py  provenance.py  schema_validation.py
examples/: standalone_usage.py
