[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-audit"
version = "0.3.1"
description = "A framework for risk assessment of assumption violations in time-series causal discovery. Generates publication-quality pre-discovery figures (IEEE style) and method recommendations."
authors = [
    {name = "Marco Ruiz", email = "marco.rueda@tecnico.ulisboa.pt"},
    {name = "Miguel Arana-Catania"},
    {name = "David R. Ardila"},
    {name = "Rodrigo Ventura"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = [
    "causal-discovery",
    "time-series",
    "assumption-testing",
    "bayesian",
    "decision-support",
    "risk-quantification",
    "pre-discovery",
    "pcmci",
    "tigramite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
    "PyYAML>=6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "SciencePlots>=2.0.0",
]
graphs = [
    "tigramite>=5.2.8",
]
eo = [
    "pyproj>=3.0.0",
    "geopandas>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
all = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "SciencePlots>=2.0.0",
    "tigramite>=5.2.8",
    "pyproj>=3.0.0",
    "geopandas>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/marcoruizrueda/causal-audit"
Documentation = "https://github.com/marcoruizrueda/causal-audit/blob/main/README.md"
Repository = "https://github.com/marcoruizrueda/causal-audit"
Issues = "https://github.com/marcoruizrueda/causal-audit/issues"

[tool.setuptools]
packages = ["causal_audit", "causal_audit.utils", "causal_audit.plotting", "causal_audit.config"]
include-package-data = true

[tool.setuptools.package-data]
causal_audit = ["config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

